--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">JumpCall</string>
     <string name="edit_num_hint">Number</string>
     <string name="button_done_label">Save</string>
-    <string name="menu_settings">Settings</string>
+    <string name="menu_save">Save</string>
     <string name="bridgeNum">99999</string>
     <string name="edit_delay_hint">Delay</string>
     <string name="delayTime">11111</string>
@@ -15,5 +15,10 @@
     <string name="button_call_label">Call</string>
     <string name="title_activity_call_bridge">OneTouch Pinless</string>
     <string name="button_new_row_label">Add Number</string>
+    <string name="textFieldHeaderNumber">Number to dial</string>
+    <string name="textFieldHeaderDelay">Wait(Sec)</string>
+    <string name="menu_reset">Reset</string>
+    <string name="button_desc_add_row">Add Row Button</string>
+    <string name="desc_delete_row">Delete Row</string>
 
 </resources>
