--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">AltRoute</string>
+    <string name="app_name">BY-PASS</string>
     <string name="edit_num_hint">Number</string>
     <string name="menu_save">Save</string>
     <string name="edit_delay_hint">Delay</string>
