--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,24 @@
 <resources>
 
     <string name="app_name">BY-PASS</string>
-    <string name="edit_num_hint">Number</string>
+
     <string name="menu_save">Save</string>
-    <string name="edit_delay_hint">Delay</string>
-    <string name="config_page_message">Add the access and passcode numbers and delays to following those. Phone number will be dialed at last.</string>
-    <string name="textFieldHeaderNumber">Number to dial</string>
-    <string name="textFieldHeaderDelay">Wait(Sec)</string>
     <string name="menu_reset">Reset</string>
+
+    <string name="textFieldHeaderNumber">Calling card setup</string>
+    <string name="connectionNumber">Connection Number</string>
+    <string name="edit_num_hint">Option/Passcode</string>
+    <string name="edit_delay_hint">Wait(Sec)</string>
     <string name="button_desc_add_row">Add Row Button</string>
     <string name="desc_delete_row">Delete Row</string>
-    <string name="permissionRequestMessageReadContacts"> shows Contacts info of the destination number from phone Contacts.</string>
-    <string name="permissionRequestMessageCallPhone"> places a call via configured routing number and requires permission to manage phone calls to do so.</string>
+
+    <string name="textFilterHeaderCountryCode">Country Codes</string>
+    <string name="editTextHintCountryCode">Country Code</string>
+    <string name="editTextHintDialAs">Dial as</string>
+
+    <string name="permissionRequestMessageReadContacts"> shows Contacts info of the destination number in routing message from phone Contacts.</string>
+    <string name="permissionRequestMessageCallPhone"> requires this permission to place a call via configured routing number.</string>
     <string name="permissionRequestReadContactsIfDenied">If denied, routing notification will not show contact info.</string>
-    <string name="permissionRequestCallPhoneIfDenied">If denied, app will not work as intended.</string>
-    <string name="textFilterHeaderCountryCode">Route Country Code</string>
-    <string name="textFilterHeaderConvertTo">Convert to</string>
+    <string name="permissionRequestCallPhoneIfDenied">If denied, app will not work as intended.\n\nExit app?</string>
 
 </resources>
