--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <string name="menu_save">Save</string>
     <string name="menu_reset">Reset</string>
+    <string name="menu_guide">Show Intro</string>
 
     <string name="textFieldHeaderNumber">Calling card setup</string>
     <string name="connectionNumber">Connection Number</string>
@@ -20,5 +21,11 @@
     <string name="permissionRequestMessageCallPhone"> requires this permission to place a call via configured routing number.</string>
     <string name="permissionRequestReadContactsIfDenied">If denied, routing notification will not show contact info.</string>
     <string name="permissionRequestCallPhoneIfDenied">If denied, app will not work as intended.\n\nExit app?</string>
+
+    <string name="title_activity_guide">GuideActivity</string>
+    <string name="guide_button_skip">SKIP</string>
+    <string name="guide_button_next">&gt;</string>
+    <string name="guide_button_prev">&lt;</string>
+    <string name="guide_button_done">DONE</string>
 
 </resources>
